# djazzy-vscode

./: .env.example  .eslintignore  .gitignore  .vscodeignore  CHANGELOG.md  CHANGELOG.template.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  esbuild.config.js  nplusone-scoring.md  package-lock.json  package.json  pull_request_template.md  pyproject.toml  requirements.txt  test-file.txt  tsconfig.json
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml
client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: credentials.ts  extension.ts  utils.ts
client/src/common/: actions.ts  commands.ts  constants.ts  log.ts  logs.ts  telemetry.ts
client/src/test/: authService.test.ts  extension.test.ts  helper.ts  migrations.test.ts
client/src/testFixture/: mockUserSession.ts
docs/: CONVENTION_RULES.md
examples/: hello.js
scripts/: compile-python.sh  e2e.sh  loadEnv.sh
server/: .env.example  babel.config.json  jest.config.json  migrate.config.json  migrate.config.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
server/bundled/tools/djazzy_rust/: Cargo.toml  README.md
server/bundled/tools/djazzy_rust/src/: lib.rs  main.rs
server/src/: commentConventions.ts  defaultConventions.ts  languageConventions.ts  server.ts  settings.ts  telemetry.ts  utils.ts
server/src/common/: djangoProjectAnalyzer.ts  djangoProjectDetector.ts  logs.ts
server/src/constants/: api.ts  chat.ts  commands.ts  (+6 more)
shared/: constants.ts  helpers.ts  telemetry.ts
(+157 files in other folders)
