[package]
name = "djazzy_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = { version = "1.10.0" }
tree-sitter = "0.25.2"
tree-sitter-python = "0.23.6"

[dev-dependencies]
tempfile = "3.6"
